WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309346
[JSC] `TypedArray#sort` fails when comparator access `.buffer`
https://bugs.webkit.org/show_bug.cgi?id=309346
Summary
[JSC] `TypedArray#sort` fails when comparator access `.buffer`
Sosuke Suzuki
Reported
2026-03-06 04:42:05 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-06 04:43:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60057
EWS
Comment 2
2026-03-06 16:29:05 PST
Committed
308833@main
(b9c004b3c5be): <
https://commits.webkit.org/308833@main
> Reviewed commits have been landed. Closing PR #60057 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-06 16:30:12 PST
<
rdar://problem/171939131
>
EWS
Comment 4
2026-03-13 19:56:52 PDT
Committed
305413.473@safari-7624-branch
(08422e1a3b87): <
https://commits.webkit.org/305413.473@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4712 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug